# serbia

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: item.rs  lib.rs
src/item/: fields.rs
tests/: 01_basic_use.rs  02_serbia_field_attrs.rs  03_serde_field_attrs.rs  04_mem_leaks.rs  04_sec.rs  tests.rs
tests/trybuild/: 01-regular-struct-roundtrip.rs  02-tuple-struct-roundtrip.rs  03-enum-roundtrip.rs  04-type-alias.rs  05-bufsize-wrong-arg.rs  05-bufsize-wrong-arg.stderr  06-unhandled-const.rs  06-unhandled-const.stderr
