[package]
name = "serbia"
description = "No-fuss big arrays for Serde"
version = "0.1.1-alpha.0"
authors = ["Tomasz Kurcz <uint@lavabit.com>"]
license = "MIT"
repository = "https://github.com/uint/serbia"
documentation = "https://docs.rs/serbia"
edition = "2018"
categories = ["rust-patterns"]
keywords = ["serde"]

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^1", features = ["full", "printing"] }

[dev-dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"

[lib]
proc-macro = true
